# accelerate-io

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  accelerate-io.cabal  configure.ac  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
.github/workflows/: ci.yml
Data/Array/Accelerate/: IO.hs
Data/Array/Accelerate/IO/: BMP.hs  BlockCopy.hs  ByteString.hs  IArray.hs  Ptr.hs  Repa.hs  Vector.hs
accelerate-io/: CHANGELOG.md  README.md  accelerate-io.cabal
accelerate-io-JuicyPixels/: CHANGELOG.md  README.md  accelerate-io-JuicyPixels.cabal
accelerate-io-JuicyPixels/src/Data/Array/Accelerate/IO/Codec/: Picture.hs
accelerate-io-JuicyPixels/src/Data/Array/Accelerate/IO/Codec/Picture/: Types.hs
accelerate-io-array/: accelerate-io-array.cabal
accelerate-io-array/src/Data/Array/Accelerate/IO/Data/Array/: IArray.hs  Internal.hs  Unboxed.hs
accelerate-io-array/src/Data/Array/Accelerate/IO/Data/Primitive/: ByteArray.hs
accelerate-io-array/test/: Test.hs
accelerate-io-array/test/Test/: Util.hs
accelerate-io-array/test/Test/Array/: IArray.hs  Unboxed.hs
accelerate-io-bmp/: accelerate-io-bmp.cabal
accelerate-io-bmp/src/Data/Array/Accelerate/IO/Codec/: BMP.hs
accelerate-io-bytestring/: CHANGELOG.md  README.md  accelerate-io-bytestring.cabal
accelerate-io-bytestring/src/Data/Array/Accelerate/IO/Data/: ByteString.hs
accelerate-io-cereal/: CHANGELOG.md  README.md  accelerate-io-cereal.cabal
accelerate-io-cereal/src/Data/Array/Accelerate/IO/Data/: Serialize.hs
accelerate-io-repa/: CHANGELOG.md  README.md  accelerate-io-repa.cabal
accelerate-io-repa/src/Data/Array/Repa/Repr/: Accelerate.hs
accelerate-io-serialise/src/Data/Array/Accelerate/IO/Codec/: Serialise.hs
accelerate-io-vector/: CHANGELOG.md  README.md  accelerate-io-vector.cabal
accelerate-io-vector/src/Data/Array/Accelerate/IO/Data/: Patterns.hs
accelerate-io-vector/src/Data/Array/Accelerate/IO/Data/Primitive/: ByteArray.hs
accelerate-io-vector/src/Data/Array/Accelerate/IO/Data/Vector/: Generic.hs  Primitive.hs  Storable.hs  Unboxed.hs
accelerate-io-vector/src/Data/Array/Accelerate/IO/Data/Vector/Generic/: Mutable.hs
accelerate-io-vector/src/Data/Array/Accelerate/IO/Data/Vector/Primitive/: Internal.hs
accelerate-io-vector/test/: Test.hs
accelerate-io-vector/test/Test/: Util.hs
accelerate-io-vector/test/Test/Vector/: Storable.hs  Unboxed.hs
accelerate-io/src/Data/Array/Accelerate/IO/Codec/: BMP.hs
accelerate-io/src/Data/Array/Accelerate/IO/Data/Array/: IArray.hs  Unboxed.hs
accelerate-io/src/Data/Array/Accelerate/IO/Data/Vector/: Unboxed.hs
accelerate-io/src/Data/Array/Accelerate/IO/Data/Vector/Primitive/: Internal.hs
accelerate-io/src/Data/Array/Accelerate/IO/Foreign/: ForeignPtr.hs  Internal.hs  Ptr.hs
accelerate-io/src/Data/Array/Repa/Repr/: Accelerate.hs
accelerate-io/test/: Test.hs
accelerate-io/test/Test/Vector/: Storable.hs
icebox/: Ptr.hs
src/Data/Array/Accelerate/: IO.hs
src/Data/Array/Accelerate/IO/: ByteString.hs  IArray.hs
src/Data/Array/Accelerate/IO/Codec/: BMP.hs
src/Data/Array/Accelerate/IO/Data/: ByteString.hs
src/Data/Array/Accelerate/IO/Data/Array/: IArray.hs  Internal.hs  Unboxed.hs
src/Data/Array/Accelerate/IO/Data/Vector/: Generic.hs  Internal.hs  Primitive.hs  Storable.hs  Unboxed.hs
src/Data/Array/Accelerate/IO/Data/Vector/Generic/: Mutable.hs
src/Data/Array/Accelerate/IO/Data/Vector/Primitive/: Internal.hs
src/Data/Array/Accelerate/IO/Foreign/: ForeignPtr.hs  Ptr.hs
src/Data/Array/Accelerate/IO/Vector/: Storable.hs
test/: Test.hs
test/Test/: Util.hs
test/Test/Array/: IArray.hs  Unboxed.hs
test/Test/Vector/: Storable.hs  Unboxed.hs
utils/: ghci
