name:                   accelerate-io-repa
version:                0.1.0.0
cabal-version:          >= 1.10
build-type:             Simple

synopsis:               Read and write Accelerate arrays in various formats
Description:
  This package provides efficient conversion routines between a range of array
  types and Accelerate arrays.
  .
  Refer to the main /Accelerate/ package for more information:
  <http://hackage.haskell.org/package/accelerate>

license:                BSD3
license-file:           LICENSE
author:                 The Accelerate Team
maintainer:             Trevor L. McDonell <trevor.mcdonell@gmail.com>
homepage:               https://github.com/AccelerateHS/accelerate-io#readme
bug-reports:            https://github.com/AccelerateHS/accelerate-io/issues

extra-source-files:
    README.md
    CHANGELOG.md

library
  build-depends:
          base            >= 4.10 && < 4.14
        , accelerate      >= 1.4
        , repa            >= 3.2

  exposed-modules:
        Data.Array.Repa.Repr.Accelerate

  ghc-options:
        -O2
        -Wall
        -funbox-strict-fields

  ghc-prof-options:
        -fprof-auto

  hs-source-dirs:   src
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/AccelerateHS/accelerate-io

-- vim: nospell
