Name:                   accelerate-io
Version:                1.3.0.0
Cabal-version:          >= 1.10
Tested-with:            GHC >= 7.8
Build-type:             Simple

Synopsis:               Read and write Accelerate arrays in various formats
Description:
  This package provides efficient conversion routines between a range of array
  types and Accelerate arrays.
  .
  Refer to the main /Accelerate/ package for more information:
  <http://hackage.haskell.org/package/accelerate>

License:                BSD3
License-file:           LICENSE
Author:                 The Accelerate Team
Maintainer:             Trevor L. McDonell <trevor.mcdonell@gmail.com>
Homepage:               https://github.com/AccelerateHS/accelerate-io
Bug-reports:            https://github.com/AccelerateHS/accelerate/issues

Category:               Compilers/Interpreters, Concurrency, Data, Parallelism
Stability:              Experimental

Extra-source-files:
    README.md
    CHANGELOG.md

library
  build-depends:
          base            >= 4.8 && < 4.13
        , accelerate      >= 1.3
        , array           >= 0.3
        , repa            >= 3.2

  exposed-modules:
        -- array
        Data.Array.Accelerate.IO.Data.Array.IArray
        Data.Array.Accelerate.IO.Data.Array.Unboxed

        -- foeign
        Data.Array.Accelerate.IO.Foreign.Ptr
        Data.Array.Accelerate.IO.Foreign.ForeignPtr

        -- repa
        Data.Array.Repa.Repr.Accelerate

  other-modules:
        Data.Array.Accelerate.IO.Data.Array.Internal
        Data.Array.Accelerate.IO.Data.Vector.Primitive.Internal

  default-language:
        Haskell2010

  hs-source-dirs:
        src

  ghc-options:
        -O2
        -Wall
        -funbox-strict-fields

  ghc-prof-options:
        -fprof-auto


test-suite test-io
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              Test.hs
  ghc-options:          -main-is Test

  build-depends:
        base                    >= 4.8  && < 4.13
      , accelerate
      , accelerate-io
      , array
      , hedgehog                >= 0.5
      , tasty                   >= 0.11
      , tasty-hedgehog          >= 0.1
      , vector

  ghc-options:
        -Wall
        -threaded
        -rtsopts

  other-modules:
      Test.Array.IArray
      Test.Array.Unboxed
      Test.Vector.Storable
      Test.Vector.Unboxed
      Test.Util


source-repository head
  Type:                 git
  Location:             git://github.com/AccelerateHS/accelerate-io.git

source-repository this
  Type:                 git
  Tag:                  1.3.0.0
  Location:             git://github.com/AccelerateHS/accelerate-io.git

-- vim: nospell
