Name:                   accelerate-io
Version:                1.3.0.0
Cabal-version:          >= 1.10
Tested-with:            GHC >= 7.8
Build-type:             Simple

Synopsis:               Read and write Accelerate arrays in various formats
Description:
  This package provides efficient conversion routines between a range of array
  types and Accelerate arrays.
  .
  As of version 1.3 this package has been split up into smaller components.
  .
  Refer to the main /Accelerate/ package for more information:
  <http://hackage.haskell.org/package/accelerate>

License:                BSD3
License-file:           LICENSE
Author:                 The Accelerate Team
Maintainer:             Trevor L. McDonell <trevor.mcdonell@gmail.com>
Homepage:               https://github.com/AccelerateHS/accelerate-io
Bug-reports:            https://github.com/AccelerateHS/accelerate/issues

Category:               Compilers/Interpreters, Concurrency, Data, Parallelism
Stability:              Experimental

Extra-source-files:
    README.md
    CHANGELOG.md

library
  build-depends:
          base            >= 4.10 && < 4.14
        , accelerate      >= 1.4

  exposed-modules:
        Data.Array.Accelerate.IO.Foreign.Ptr
        Data.Array.Accelerate.IO.Foreign.ForeignPtr

  default-language:
        Haskell2010

  hs-source-dirs:
        src

  ghc-options:
        -O2
        -Wall
        -funbox-strict-fields

  ghc-prof-options:
        -fprof-auto


source-repository head
  Type:                 git
  Location:             git://github.com/AccelerateHS/accelerate-io.git

source-repository this
  Type:                 git
  Tag:                  1.3.0.0
  Location:             git://github.com/AccelerateHS/accelerate-io.git

-- vim: nospell
