Name:                   accelerate-io
Version:                1.3.0.0
Cabal-version:          >= 1.10
Tested-with:            GHC >= 8.6
Build-type:             Simple

Synopsis:               Read and write Accelerate arrays in various formats
Description:
  This package provides efficient conversion routines between a range of array
  types and Accelerate arrays.
  .
  As of version 1.3 this package has been split up into smaller components.
  .
  Refer to the main /Accelerate/ package for more information:
  <http://hackage.haskell.org/package/accelerate>

License:                BSD3
License-file:           LICENSE
Author:                 The Accelerate Team
Maintainer:             Trevor L. McDonell <trevor.mcdonell@gmail.com>
Homepage:               https://github.com/AccelerateHS/accelerate-io
Bug-reports:            https://github.com/AccelerateHS/accelerate/issues

Category:               Compilers/Interpreters, Concurrency, Data, Parallelism
Stability:              Experimental

Extra-source-files:
    README.md
    CHANGELOG.md

library
  build-depends:
          base            >= 4.8 && < 5
        , accelerate      >= 1.3

  exposed-modules:
        Data.Array.Accelerate.IO.Foreign.Ptr
        Data.Array.Accelerate.IO.Foreign.ForeignPtr

  other-modules:
        Data.Array.Accelerate.IO.Foreign.Internal

  default-language:
        Haskell2010

  hs-source-dirs:
        src

  ghc-options:
        -O2
        -Wall
        -funbox-strict-fields

  ghc-prof-options:
        -fprof-auto


source-repository head
  type:                 git
  location:             git://github.com/AccelerateHS/accelerate-io.git

source-repository this
  type:                 git
  tag:                  v1.3.0.0
  location:             git://github.com/AccelerateHS/accelerate-io.git

-- vim: nospell
